--- a/views/pages/accueil_projet.ejs
+++ b/views/pages/accueil_projet.ejs
@@ -38,7 +38,7 @@
             <!-- Fin Menu Vertical Gauche-->
 
             <!-- Début page 'Home'-->
-            <div id="page_home" class="page_begins pic1">
+            <div id="page_home" class="page_begins pic1" style="display: none">
                 <section id="section2">
                     <div id="sensor_values_table">
                         <div id="top_table">
@@ -84,7 +84,7 @@
             <!-- Fin page 'Home' -->
 
             <!-- Début page 'Settings' -->
-            <div id="page_settings" class="page_begins pic2">
+            <div id="page_settings" class="page_begins pic2" style="display: none">
                 <section id="section1">
                     <div id="choix_utilisateur">
                         <div id="button1_div">
@@ -256,7 +256,7 @@
             <!-- Fin page 'Settings'-->
 
             <!-- Début page temperature graphics -->
-            <div id="page_temp_graph" class="page_begins pic4">
+            <div id="page_temp_graph" class="page_begins pic4" style="display: none">
                 <section id="section4">
                     <form>
                         <select class="config_display_chart">
@@ -286,7 +286,7 @@
             <!-- Fin page ph graphics -->
 
             <!-- Début page fertilisant graphics -->
-            <div id="page_fert_graph" class="page_begins pic6">
+            <div id="page_fert_graph" class="page_begins pic6" style="display: none">
                 <section id="section6">
                     <form>
                         <select class="config_display_chart">
@@ -301,7 +301,7 @@
             <!-- Fin page fertilisant graphics -->
 
             <!-- Début page 'Pictures' -->
-            <div id="page_picture" class="page_begins pic7">
+            <div id="page_picture" class="page_begins pic7" style="display: none">
                 <section id="section7">
                     <div class="section1_div" id="photo">
                         <div id="photo_split">
@@ -337,7 +337,7 @@
             <!-- Fin page 'Pictures' -->
 
             <!-- Début page Forum -->
-            <div id="page_forum" class="page_begins pic8">
+            <div id="page_forum" class="page_begins pic8" style="display: none">
                 <section id="section8">
                     <div class="WIP">Work In Progress</div>
                 </section>
@@ -376,7 +376,7 @@
         
 <!-- script pour cacher/afficher les informations de la page "settings" -->
         <script type="text/javascript">
-            jQuery(document).ready(function($){
+            jQuery(document).ready(function($) {
                 $("#temperature").hide()
                 $("#ph").hide()
                 $("#fertilisant").hide()
@@ -400,45 +400,6 @@
                 })
             })
         </script>
-        
-<!-- script pour cacher/afficher les différentes pages (à améliorer mais utile pour voir ce que ça donne) -->
-        <script type="text/javascript">
-            jQuery(document).ready(function($){
-                $(".page_begins").hide()
-                $("#page_home").show()
-                
-                $("#pic1").on("click", function(){
-                    $(".page_begins").hide()
-                    $("#page_home").show(0)
-                })
-                $("#pic2").on("click", function(){
-                    $(".page_begins").hide()
-                    $("#page_settings").show(0)
-                }) 
-                $("#pic4").on("click", function(){
-                    $(".page_begins").hide()
-                    $("#page_temp_graph").show(0)
-                })
-                $("#pic5").on("click", function(){
-                    $(".page_begins").hide()
-                    $("#page_ph_graph").show(0)
-                })
-                $("#pic6").on("click", function(){
-                    $(".page_begins").hide()
-                    $("#page_fert_graph").show(0)
-                })
-                $("#pic7").on("click", function(){
-                    $(".page_begins").hide()
-                    $("#page_picture").show(0)
-                })
-                $("#pic8").on("click", function(){
-                    $(".page_begins").hide()
-                    $("#page_forum").show(0)
-                }) 
-            })
-        </script>
-
-<!-- -->
         <script>
             document.getElementById("image1").onclick = function(){
                 var id = this.getAttribute('id')
@@ -473,8 +434,9 @@
                     var moduleId = $('#module').val()
                     connectToSocket(moduleId)
 
-                    $('#pic1').addClass('selected')
-                    lastSelectedMenu = $('#pic1')[0]
+                    var elem = localStorage.getItem('lastSelectedMenu')
+                    console.log(elem)
+                    menuSwitch($('#'+elem)[0])
                     
                     var date = new Date()
                     var timeRatio = 100 * (date.getHours() * 60 + date.getMinutes()) / (24*60)
@@ -486,7 +448,6 @@
                     $('#pic6').on('click', _displayFertValue)
 
                     $('.config_display_chart').on('change', (event) => {
-                        console.log(event.target)
                         var type = $(event.target).val()
                         switch(type) {
                             case 'Jour':  _displayTempValue(_timeFilter('day')); break
@@ -522,13 +483,13 @@
                 function menuSwitch(selectedElem) {
                     if (!($(selectedElem).hasClass('sub-menu'))) {
                         $(lastSelectedMenu).removeClass('selected')
-                        //$(".page_begins").hide()
+                        $(".page_begins").hide()
                         var id = $(selectedElem).attr('id')
-                        //$('.page_begins.'+id)
+                        $('.page_begins.'+id).show()
                         $(selectedElem).addClass('selected')
+                        lastSelectedMenu = selectedElem
+                        localStorage.setItem('lastSelectedMenu',id)
                     }
-                    
-                    lastSelectedMenu = selectedElem
                 }
 
                 function moduleSwitch(moduleId) {
