--- a/views/pages/accueil_projet.ejs
+++ b/views/pages/accueil_projet.ejs
@@ -490,7 +490,7 @@
                         lastSelectedMenu = selectedElem
                         localStorage.setItem('lastSelectedMenu', id)
 
-                        if($(selectedElem).hasClass('image2') && firstMenuSelect) {)
+                        if($(selectedElem).hasClass('image2') && firstMenuSelect) {
                             $('#click_action').trigger('click')
                             $(selectedElem).click()
                         }
