--- a/views/pages/accueil_projet.ejs
+++ b/views/pages/accueil_projet.ejs
@@ -259,7 +259,7 @@
             <div id="page_temp_graph" class="page_begins pic4" style="display: none">
                 <section id="section4">
                     <form>
-                        <select class="config_display_chart">
+                        <select id="#config_display_chart_temp">
                             <option>Jour</option>
                             <option>Semaine</option>
                             <option>Mois</option>
@@ -274,7 +274,7 @@
             <div id="page_ph_graph" class="page_begins pic5">
                 <section id="section5">
                     <form>
-                        <select class="config_display_chart">
+                        <select id="#config_display_chart_ph">
                             <option>Jour</option>
                             <option>Semaine</option>
                             <option>Mois</option>
@@ -289,7 +289,7 @@
             <div id="page_fert_graph" class="page_begins pic6" style="display: none">
                 <section id="section6">
                     <form>
-                        <select class="config_display_chart">
+                        <select id="#config_display_chart_fert">
                             <option>Jour</option>
                             <option>Semaine</option>
                             <option>Mois</option>
