--- a/views/pages/accueil_projet.ejs
+++ b/views/pages/accueil_projet.ejs
@@ -429,6 +429,7 @@
                 var lastSelectedMenu
                 var iosocketNsp
                 var firstMenuSelect = true
+                var chart
 
                 // Tout ce qui doit être exécuter à l'affichage
                 function initialize() {
@@ -660,7 +661,11 @@
                 }
 
                 function _createCharts(title, xLabel, yLabel, color, elmtId, data, timestamp, yMin, yMax){
-                    new Chart(document.getElementById(elmtId), {
+                    if(chart){
+                        chart.destroy();
+                    }
+
+                    chart = new Chart(document.getElementById(elmtId), {
                         type: 'line',
                         data: {
                             labels: timestamp,
