fix infinite import dialog

--- a/views/pages/accueil_projet.ejs
+++ b/views/pages/accueil_projet.ejs
@@ -710,6 +710,7 @@
 
                 function _buildImportRows(data) {
                     var table = $('#import-table tbody')
+                    table.empty()
                     data.forEach((profile) => {
                         table.append(_constructRow(profile))
                     })
