Fix division by 0 & blue ph chart

--- a/views/pages/accueil_projet.ejs
+++ b/views/pages/accueil_projet.ejs
@@ -608,7 +608,7 @@
                                 return x.ph
                             })
 
-                            _createCharts('Courbe du PH', 'Durée (en h)', 'PH', '#FF0000', 'ph_curve', ph, timestamp, 0, 14)
+                            _createCharts('Courbe du PH', 'Durée (en h)', 'PH', '#0000FF', 'ph_curve', ph, timestamp, 0, 14)
                          }
                     })
                 }
